<resources>
    <string name="app_name">g0569</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_a_member_sign_up_now">Not a member?Sign up now</string>
    <string name="background">Background</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
